# STM32Rust

./: Cargo.toml
.cargo/: config
src/: main.rs
